change for dbUnit - including dependencies in create_zip
SVN-Revision: 15682

--- a/build.xml
+++ b/build.xml
@@ -529,6 +529,12 @@
 			<fileset dir="${base.dir}/catissuecore-properties" />
 		</copy>
 
+		<copy file="dbunitbuild.xml" todir="${zip.dir}" overwrite="true" />
+		<copy file="CDEConfig.xml" todir="${zip.dir}" overwrite="true" />
+		<copy todir="${zip.dir}/caTissueSuite_dbunit" overwrite="true">
+					<fileset dir="${base.dir}/caTissueSuite_dbunit" />
+		</copy>
+
 		<copy todir="${zip.dir}/lib" overwrite="true">
 			<fileset file="${base.dir}/extra_lib/ant-contrib.jar" />
 			<fileset file="${base.dir}/WEB-INF/lib/mysql-connector-java-5.0.8-bin.jar" />
