--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -267,6 +267,7 @@ query.includeDescription Include Description
 query.text Text
 query.conceptCode Concept Code
 errors.executeQuery.genericmessage=An error occurred while executing the query. Please report this problem to the Administrator.
+errors.upgradequery.message = This might be the query saved in caTissueSuite1.0.As the model has changed from caTissueSuite1.0 to caTissueSuite1.1, this is not a valid query as per the new model. An error occurred while executing this query.Please try recreating this query.If the problem still persists please contact administrator.
 errors.executeQuery.multipleRoots=Expression graph should be a connected graph.
 simpleQuery.twovalues.required=Please enter two valid values for the 'Between' operator.
 query.date.format MM-DD-YYYY
