Fixing bug : 9243 : a different message will be shown when executing a saved query when it fails because of model change.
SVN-Revision: 15693

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -267,7 +267,7 @@ query.includeDescription Include Description
 query.text Text
 query.conceptCode Concept Code
 errors.executeQuery.genericmessage=An error occurred while executing the query. Please report this problem to the Administrator.
-errors.upgradequery.message = An error occurred while executing this query. If this is a query saved in older version of Suite, it might not work due to model changes. Please try recreating this query.If the problem still persists, please contact the administrator.
+errors.upgradequery.message = An error occurred while executing this query. If this is a query saved in older version of caTissueSuite, it might not work due to model changes. Please try recreating this query.If the problem still persists, please contact the administrator.
 errors.executeQuery.multipleRoots=Expression graph should be a connected graph.
 simpleQuery.twovalues.required=Please enter two valid values for the 'Between' operator.
 query.date.format MM-DD-YYYY
