--- a/build.xml
+++ b/build.xml
@@ -304,6 +304,7 @@
 	    		<exclude name="**/WEB-INF/classes/**/namegenerator/*"/>
 				
 				<exclude name="**/pages/subMenu/**" />
+				<exclude name="**/log4j.properties" />
 				<exclude name="**/WEB-INF/src*/**" />
 				<exclude name="**/WEB-INF/lib/*.zip" />
 				<exclude name="**/WEB-INF/lib/ant*.jar" />
