modified some messages to be more user-friendly
SVN-Revision: 15762

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2014,15 +2014,15 @@ participant.registered.msg.events = Cannot edit events, Participant Registered
 participant.registered.msg.specimen = Cannot edit requirement specimen, Participant Registered
 participant.registered.msg.consents = Cannot delete consents, Participant Registered
 
-user.cannotCreateSuperAdmin = Access denied ! User does not have privilege to create Super Admin user.
-user.siteIsRequired = Access denied ! Role and / or Site is required
+user.cannotCreateSuperAdmin = User does not have privilege to create Super Admin user.
+user.siteIsRequired = Role and / or Site is required
 user.roleIsRequired = Role
-user.cannotEditOwnPrivileges = Access denied ! User cannot change own privileges.
-user.cannotCreateScientist = Access denied ! User does not have privilege to create a scientist user. 
-cp.cannotChangePrivilegesOfPIOrCoord = Access denied ! User cannot change privileges of PI or Coordinator.
+user.cannotEditOwnPrivileges = User cannot change own privileges.
+user.cannotCreateScientist = User does not have privilege to create a Scientist user. 
+cp.cannotChangePrivilegesOfPIOrCoord = User cannot change privileges of PI or Coordinator.
 #cp.siteIsRequired =  Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
-cp.siteIsRequired =  Error: Cannot create a Collection Protocol without associating any sites and users. Please visit the Assign Privileges page for the same.
-user.roleNotFound = Access denied ! User Role details not found.
+cp.siteIsRequired =  Cannot create a Collection Protocol without associating any sites and users. Please visit the Assign Privileges page for the same.
+user.roleNotFound = User Role details not found.
 sc.unableToFindContainer = Unable to find Storage Container.
 access.view.action.denied = Access denied ! User does not have privilege to view this information.
 
