--- a/catissuecore-properties/LabelGenerator.Properties
+++ b/catissuecore-properties/LabelGenerator.Properties
@@ -5,3 +5,4 @@ storageContainerBarcodeGeneratorClass=edu.wustl.catissuecore.namegenerator.Defau
 speicmenCollectionGroupLabelGeneratorClass=edu.wustl.catissuecore.namegenerator.DefaultSCGLabelGenerator
 speicmenCollectionGroupBarcodeGeneratorClass=edu.wustl.catissuecore.namegenerator.DefaultSCGBarcodeGenerator
 collectionProtocolRegistrationBarcodeGeneratorClass=edu.wustl.catissuecore.namegenerator.DefaultCPRBarcodeGenerator
+protocolParticipantIdentifierLabelGeneratorClass=edu.wustl.catissuecore.namegenerator.ProtocolParticipantIdentifierLabelGenerator
