Made changes to solve CP related issue mentioned in bug #10798
SVN-Revision: 16645

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1530,6 +1530,7 @@ pageOfStorageType.searchResultTitle=Storage Type
 pageOfStorageContainer.searchResultTitle=Storage Container
 pageOfBioHazard.searchResultTitle=Biohazard
 pageOfCollectionProtocol.searchResultTitle=Collection Protocol
+pageOfCollectionProtocolForTitli.searchResultTitle=Collection Protocol
 pageOfDistributionProtocol.searchResultTitle=Distribution Protocol
 pageOfParticipant.searchResultTitle=Participant
 pageOfCollectionProtocolRegistration.searchResultTitle=Collection Protocol Registration
