--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2141,3 +2141,9 @@ shipmentRequest.name=Shipment Request
 #-- For Receive Shipment page
 errors.locations.notSufficient.shipmentReceive=System can not allocate storage locations to {0} at this time due to insufficent number of storage locations.
 aliquots.derivedCount = Derivative count
+
+
+#added for printing
+print.checkboxLabelStorageContainer = Print Labels
+print.printerTypeLabel= Printer Type
+print.printerLocationLabel = Printer Location
