added for show/hide forms based on CPs
SVN-Revision: 16858

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -59,3 +59,8 @@ caCORE.project.name=
 #Choose false to show all clinical and pathology default annotations for data entry
 #Choose true and edit the Show_Hide_Forms.csv present in the installable folder to display selective forms for data entry
 show.hide.forms=true
+
+#Choose below option to associate dynamic extensions default clinical and pathology forms to the Collection Protocols. 
+#Choose false to show all clinical and pathology default annotations for data entry
+#Choose true and edit the Show_Hide_Forms.xml present in the installable folder to associate selective forms to Collection Protocol for data entry
+show.hide.forms.based.on.CPs=false
