Anticipatory specimen changes Applyto link. Collected changed to Coll? Header row background changed
SVN-Revision: 16917

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1934,11 +1934,11 @@ cpbasedentry.quantityperaliquot Quantity per aliquot, Quantity per aliquot canno
 cpbasedentry.derivedspecimen.quantity=Derive Specimen Quantity
 
 # AnticipatorySpecimens class Keys begin
-anticipatorySpecimen.Collected Collected?
-anticipatorySpecimen.Created Created?
+anticipatorySpecimen.Collected Coll?
+anticipatorySpecimen.Created Collect All
 anticipatorySpecimen.Concentration Conc.
 anticipatorySpecimen.Quantity Qty
-anticipatorySpecimen.Location Location
+anticipatorySpecimen.Location Storage location
 anticipatorySpecimen.AliquotDetails Aliquot Details 
 anticipatorySpecimen.DerivativeDetails Derivative Details
 anticipatorySpecimen.Parent Parent
