Added class name for printing storage container
SVN-Revision: 17094

--- a/catissuecore-properties/PrintServiceImplementor.properties
+++ b/catissuecore-properties/PrintServiceImplementor.properties
@@ -1,6 +1,8 @@
 specimen=edu.wustl.catissuecore.printservicemodule.SpecimenLabelPrinterImpl
 specimencollectiongroup=edu.wustl.catissuecore.printservicemodule.SpecimenCollectionGroupLabelPrinterImpl
+storagecontainer=edu.wustl.catissuecore.printservicemodule.StorageContainerLabelPrinterImpl
 printWebServiceEndPoint=http://localhost:8080/caTissuePrintWebService/Print?wsdl
-printerType=Box,TestContainer,printer3
-printerLocation=\\\\pttrend\\Aryabhata 6th floor A-side printer,printerlocation 2,printerlocation 3
+printerType=
+printerLocation=
+
 
