--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1935,7 +1935,8 @@ cpbasedentry.derivedspecimen.quantity=Derive Specimen Quantity
 
 # AnticipatorySpecimens class Keys begin
 anticipatorySpecimen.Collected Coll?
-anticipatorySpecimen.Created Collect All
+anticipatorySpecimen.CollectAll Collect All
+anticipatorySpecimen.Created Created
 anticipatorySpecimen.Concentration Conc.
 anticipatorySpecimen.Quantity Qty
 anticipatorySpecimen.Location Storage location
