Added new key shipment.specimenSiteValidation for shipping and tracking.
SVN-Revision: 17214

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2065,6 +2065,7 @@ shipment.status=Status
 shipment.storage.location=Storage Location
 shipment.receiver.comments=Comments
 shipment.specimenContainerRequired=In shipment either specimens or containers, or both
+shipment.specimenSiteValidation=In shipment,Sender's site and Receiver's Site can't be same.
 
 #-- Uncomment when in SNT
 buttons.reject=Reject  
