--- a/build.xml
+++ b/build.xml
@@ -36,7 +36,7 @@
 	<property name="project.src.domain" value="${base.dir}/WEB-INF/src/edu/wustl/catissuecore/domain/"/>
 
 	<!-- flex related properties -->
-	<property name="FLEX_HOME" value="F:/flex-builder/Flex SDK 2"/>
+<property name="FLEX_HOME" value="F:/flex-builder/Flex SDK 2"/>
     <property name="FLEX_APP_ROOT" value="flexclient"/>
 	<property name="flex.dir" value="${base.dir}/WEB-INF/flex" />
 	<!-- flex related properties finish -->
@@ -533,6 +533,7 @@
 		<!--copy file="log4j.xml" todir="${zip.dir}" overwrite="true" /> -->
 		<copy file="login-config.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="properties-service.xml" todir="${zip.dir}" overwrite="true" />
+    	<copy file="deploy_uk_edin.xml" todir="${zip.dir}" overwrite="true" />
 
 		<copy todir="${zip.dir}/catissuecore-properties" overwrite="true">
 			<fileset dir="${base.dir}/catissuecore-properties" />
