conc. field reduced. increased size of storage location. Created changed to Create All.
SVN-Revision: 17230

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1936,7 +1936,7 @@ cpbasedentry.derivedspecimen.quantity=Derive Specimen Quantity
 # AnticipatorySpecimens class Keys begin
 anticipatorySpecimen.Collected Coll?
 anticipatorySpecimen.CollectAll Collect All
-anticipatorySpecimen.Created Created
+anticipatorySpecimen.Created Create All
 anticipatorySpecimen.Concentration Conc.
 anticipatorySpecimen.Quantity Qty
 anticipatorySpecimen.Location Storage location
