--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -629,7 +629,7 @@ app.optimal.resolutions Optimal Resolutions
 app.optimal.resolutions.win Windows - 1024 * 768
 app.optimal.resolutions.mac Mac - 1024*768
 app.name=caTissue Suite
-app.version= v 1.1.
+app.version= v 1.1P1.
 app.home=HOME
 app.administrativeData=Administrative Data
 app.biospecimen=Biospecimen Data
