--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2035,19 +2035,24 @@ shipment.details=Shipment Details
 shipemntRequest.details=Shipment Request Details
 shipment.sendOn=Send On
 shipment.sendDate=Shipping Time
-shipment.label=Label
-shipment.barcode=Barcode
-shipment.receiverSite=Receiver's Site
-shipment.senderSite=Sender's Site
+shipment.label=Shipment Label
+shipment.barcode=Shipment Barcode
+shipment.receiverSite=Receiver Site
+shipment.senderSite=Sender Site
 shipment.receiver=Receiver
 shipment.sender=Sender
 shipment.senderComments=Comments
 shipment.send.time.hour=Hr
 shipment.send.time.minute=Min
+shipment.receiverName=Receiver Name
+shipment.senderName=Sender Name
+shipment.receiverPhone=Receiver Phone
+shipment.senderPhone=Sender Phone
+shipment.senderEmail=Sender Email
 
 shipment.request.requesterSite=Requester's Site
 shipment.request.sentOn=Sent On
-shipment.request.senderComments=Sender's Comments
+shipment.request.senderComments=Sender Comments
 
 shipment.contents=Contents
 shipment.contentsRequired=Shipment must contain either specimens or containers, or both
