--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -113,10 +113,16 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 	  <taglib-location>/WEB-INF/nlevelcombo.tld</taglib-location>
   </taglib>
   
-    <taglib>
+  <taglib>
 	  <taglib-uri>/WEB-INF/specimenDetails.tld</taglib-uri>
 	  <taglib-location>/WEB-INF/specimenDetails.tld</taglib-location>
   </taglib>
+  
+  <taglib>
+	  <taglib-uri>/WEB-INF/twoColDetailsTag.tld</taglib-uri>
+	  <taglib-location>/WEB-INF/twoColDetailsTag.tld</taglib-location>
+  </taglib>
+  
   
 <!--  caCore like system entries -->
 	<context-param>
