--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -10,7 +10,7 @@ jboss.server.name=default
 #Default port is 8080 
 jboss.server.port=8080
 
-#database type permissible values: oracle or mysql
+#database type permissible values: oracle or mysql or mssqlserver
 database.type=
 
 #Hostname or IP address of the machine on which the database server is running.
@@ -19,6 +19,7 @@ database.host=localhost
 #Port number to connect with the database server
 #Default port for MySQL : 3306
 #Default Port for Oracle: 1521
+#Default Port for MsSQLServer: 1433
 database.port=
 
 #Oracle TNS name, applicable only when database.type=oracle
