Added code to copy deploy_barcode_generator_DFCI.xml file into the installable zip.
SVN-Revision: 17756

--- a/build.xml
+++ b/build.xml
@@ -535,7 +535,8 @@
 		<copy file="login-config.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="properties-service.xml" todir="${zip.dir}" overwrite="true" />
     	<copy file="deploy_uk_edin.xml" todir="${zip.dir}" overwrite="true" />
-
+		<copy file="deploy_barcode_generator_DFCI.xml" todir="${zip.dir}" overwrite="true" />
+			
 		<copy todir="${zip.dir}/catissuecore-properties" overwrite="true">
 			<fileset dir="${base.dir}/catissuecore-properties" />
 		</copy>
