For  the bug 11092 :Requirement from DFCI that not all fields should be optional while creating Participant. Added the property isLastNameNull
SVN-Revision: 17763

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -609,6 +609,9 @@ errors.capacity.greaterThan0={0} should be greater than 0.
 errors.disable.specimen=First disable the specimens.
 errors.xss.invalid={0} is invalid. It should not contain (, ), < or > character.
 errors.specimen.quantity=Invalid {0} for Specimen Type {1}
+# Added by Geeta foe DFCI
+error.participant.lastName=Participant last name is required
+
 #--Error Keys End--
 
 #--Header, Footer Keys Begin--
