Changes for bug# 11051. Reporting problem in case of exception.
SVN-Revision: 17835

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2182,3 +2182,6 @@ summary.page.cs = By Clinical Status
 summary.page.spDetails =  Specimens Details
 summary.page.spPathStat = Specimens by Pathological Status
 summary.page.spAnatSite = Specimens by Anatomic Site 
+
+#---- Generic Error Message ------------
+system.error = System has encountered unexpected error. Please contact the administrator for further help. If you would like to report this problem, please fill in the below form.
