database.schemaname property is added for MsSqlServer database.
SVN-Revision: 17995

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -29,6 +29,9 @@ database.name=catissuecore
 database.username=catissue_core
 database.password=catissue_core
 
+#MsSqlServer database schema name, applicable only when database.type=mssqlserver
+database.schemaname=
+
 email.administrative.emailAddress=
 email.sendEmailFrom.emailAddress=
 email.mailServer=
