Fixed bug 11169(added specimen.printLabel)
SVN-Revision: 18097

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1938,6 +1938,7 @@ cpbasedentry.derivedspecimen.quantity=Derive Specimen Quantity
 
 # AnticipatorySpecimens class Keys begin
 anticipatorySpecimen.Collected Coll?
+specimen.printLabel Print 
 anticipatorySpecimen.CollectAll Collect All
 anticipatorySpecimen.Created Create All
 anticipatorySpecimen.Concentration Conc.
