--- a/build.xml
+++ b/build.xml
@@ -554,7 +554,7 @@
 			<fileset file="${base.dir}/lib/dom4j-1.6.jar" />
 			<fileset file="${base.dir}/lib/j2ee.jar" />
 			<fileset file="${base.dir}/lib/log4j-1.2.9.jar" />
-	
+			<fileset file="${base.dir}/WEB-INF/lib/sqljdbc.jar" />
 		</copy>
 
 		<copy todir="${zip.dir}/SQL" overwrite="true">
