Added 'configure_IIS_properties' ant target for IIS configuration.
SVN-Revision: 18443

--- a/IISSettings/worker.properties
+++ b/IISSettings/worker.properties
@@ -1,8 +1,8 @@
 # Begins worker.properties here
 
 # Define path of .properties files and jdk
-workers.tomcat_home=<IISSettings_HOME_DIR>
-workers.java_home=<JAVA_HOME_DIR>
+workers.tomcat_home=@@IISSettings_HOME@@
+workers.java_home=@@JAVA_HOME@@
 ps=\
 
 # Define workers using ajp13
