--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -74,6 +74,7 @@ orderingsystem.label.defineArrayDimensions=Array Dimensions
 orderingsystem.button.create=Create
 orderingsystem.label.ordergiven=Order Placed Successfully
 orderingsystem.arrayname.present=An array with the same name already exists in the system.
+access.denied.to.distribute=Cannot distribute one or more specimens as they belong to the site or protocol to which you do not have access to.
 
 orderingsystem.label.requestdetailsarray=Request Details-Array
 orderingsystem.label.existingArray=Existing Array
@@ -81,6 +82,7 @@ orderingsystem.label.tissueSlidefromBlock=Tissue Slide from Block
 orderingsystem.label.arrayName=Array Name
 
 errors.ordering.note.heading Note:
+errors.ordering.note2= Requested items will not be distributed as it contains specimens with any one of the following properties,
 errors.ordering.note=If the My List contains specimens with any one of the following properties,
 errors.ordering.note1=the specimens will not be available for placing an order:
 errors.ordering.a=a. The specimen is stored at a virtual location
@@ -541,6 +543,8 @@ error.faxnumber.format=Please enter valid {0}. The valid format is xxx-xxx-xxxx.
 errors.item.invalid={0} is invalid.
 errors.one.item.required=At least one entry for {0} is required.
 errors.item.format=Please enter valid {0}.
+errors.distribution.protocol=No distribution protocol selected.
+errors.order.name=Order name is mandatory.
 errors.availablequantity={0} cannot be greater than the Initial Quantity.
 errors.date.format=Please enter valid {0}. The valid format is MM-DD-YYYY.
 errors.item.unknown={0} does not exist.
@@ -2031,6 +2035,7 @@ cp.siteIsRequired =  Cannot create a Collection Protocol without associating any
 user.roleNotFound = User Role details not found.
 sc.unableToFindContainer = Unable to find Storage Container.
 access.view.action.denied = Access denied ! User does not have privilege to view this information.
+pending.order.created = A pending order has been created with order name {0} for the items selected. If required, you can finish the distribution later from the pending order list
 
 ########################################################-- For Shipping Tracking
 #-- Keys for labels on pages
