Added code coverage and junit report generation target for struts
SVN-Revision: 18601

--- a/build.xml
+++ b/build.xml
@@ -1340,11 +1340,12 @@
 							
 				<classpath>
 					
-					<pathelement path="${cat.test.src.dir}" />
 					<pathelement path= "${target.dir}" /> 
+					<pathelement path="${cat.test.src.dir}" />
 					<pathelement path= "${cat.test.classes.dir}" />
 					
 					<fileset dir="${cat.test.lib.dir}">
+						<exclude name="catissuecore.jar"/>
 					    <include name="**/*.jar"/>
 				   	</fileset>
 					
