caTissueInstall .properties - added 'configure.IIS.properties=false" User can select whether to configure IIS properties or not.
deploy.xml
- Check whether JAVA_HOME environment variable is set or not in 'assert' ant target.
- call 'configure_IIS_properties' ant target in 'deploy_all', as it is a part of deployment.


SVN-Revision: 18702

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -68,3 +68,6 @@ show.hide.forms=true
 #Choose false to show all clinical and pathology default annotations for data entry
 #Choose true and edit the Show_Hide_Forms.xml present in the installable folder to associate selective forms to Collection Protocol for data entry
 show.hide.forms.based.on.CPs=false
+
+#Choose whether to use IIS application server and configure required properties. 'true' to configure properties.
+configure.IIS.properties=false
