Added properties used in commonpackage.
SVN-Revision: 19343

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2191,3 +2191,54 @@ summary.page.spAnatSite = Specimens by Anatomic Site
 
 #---- Generic Error Message ------------
 system.error = System has encountered unexpected error. Please contact the administrator for further help. If you would like to report this problem, please fill in the below form.
+
+
+
+# error no start with C- commonpackage
+# error no start with CU- commonpackage-util
+# error no start with D- DAO
+# error no start with S- SM
+biz.delete.error=C10100~Error while deleting object.
+biz.insert.error=C10101~Error while inserting object.
+biz.multinsert.error=C10102~Error while inserting collection of objects.
+biz.update.error=C10103~Error while updating object.
+biz.setpriv.error=C10104~Error while setting Privileges.
+biz.popbean.error=C10105~Error while populating UI Bean.
+biz.popdomain.error=C10106~Error while populating Domain Object.
+biz.disableaudit.error=C10107~Error while disabling and Auditing Objects.
+biz.exequery.error=C10108~Error while executing Query.
+biz.ret.error=C10109~Not able to retrieve data.
+biz.checkstatus.error=C10109~Not able to check ActivityStatus of the given identifier.
+biz.activitystatus.error=C10110~Not able to get Activity Status.
+biz.getrelatedobj.error=C10111~Not able to get related objects.
+biz.disableobj.error=C10112~Error while disabling Objects.
+biz.retattr.error=C10113~Error while retrieving Attribute.
+biz.getlist.error=C10114~Not able to get list.
+biz.closesession.error=C10116~Error in closing DAO session.
+biz.formatex.error=C10117~Exception is null.
+biz.getinstance.error=C10118~Not able to get BizLogic Factory Instance.
+common.errors.item=C10119~Error in CommonEditAction
+#errors messages for import/export
+impexp.tablenamelist.error=C10200~Error while reading the table list file.
+impexp.mssqlimport.error=C10201~Error while MsSql import meta data.
+impexp.mysqlimport.error=C10203~Error while MySql import meta data.
+impexp.mysqlexport.error=C10204~Error while MySql export meta data.
+impexp.oraimport.error=C10203~Error while Oracle import meta data.
+impexp.oraexport.error=C10204~Error while Oracle export meta data.
+impexp.dbclose.error=C10205~Not able to close database connection.
+impexp.dbtype.error=C10206~Not able to get import/export class. Please make sure database type is correct.
+datatype.parse.error=C10207~There was a problem reading XML file.
+db.operation.error=D10100~Error in db operation.
+sm.operation.error=S10100~Error in Security Manager Operation.
+pw.encrypt.error=1002~Password encryption error.
+user.not.auth=User is not authorized 
+csm.getinstance.error=CU10000~Not able to get csm Instance.
+
+#these properties are required for common Service Locator.
+
+date.separator=/
+date.pattern=MM-dd-yyyy
+time.pattern=HH:mm:ss
+timestamp.pattern=yyyy-MM-dd-HH24.mm.ss.SSS
+min.year=1900
+max.year=9999
