Added some new keys
SVN-Revision: 19433

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2234,6 +2234,12 @@ pw.encrypt.error=1002~Password encryption error.
 user.not.auth=User is not authorized 
 csm.getinstance.error=CU10000~Not able to get csm Instance.
 
+dao.error=DAO related issues.
+sm.operation.error=Security Manager related issues.
+utility.error=Application utility method execution issues.
+de.error=Dynamic extension error.
+clz.not.found.error=Class not found error. 
+
 #these properties are required for common Service Locator.
 
 date.separator=/
