updating this file for catissue.
SVN-Revision: 19521

--- a/WEB-INF/src/SecurityManager.properties
+++ b/WEB-INF/src/SecurityManager.properties
@@ -1,2 +1,2 @@
 application.context.name=catissuecore
-class.name=edu.wustl.common.security.SecurityManager
+class.name=edu.wustl.security.manager.SecurityManager
